--- a/package.json
+++ b/package.json
@@ -18,56 +18,56 @@
     "webpack-module": "grunt module",
     "webpack-server": "grunt server",
     "webpack-build": "npm run webpack-browser && npm run webpack-module && npm run webpack-server",
-    "lint": "balena-lint -e js -e ts --typescript src build typings Gruntfile.ts && npx tsc --project tsconfig.dev.json --noEmit",
+    "lint": "balena-lint -e js -e ts src build typings Gruntfile.ts && npx tsc --project tsconfig.dev.json --noEmit",
     "test": "npm run lint && npm run build && npm run webpack-build",
-    "prettify": "balena-lint -e js -e ts --typescript --fix src build typings Gruntfile.ts"
+    "prettify": "balena-lint -e js -e ts --fix src build typings Gruntfile.ts"
   },
   "dependencies": {
     "@balena/abstract-sql-compiler": "^7.13.0",
     "@balena/abstract-sql-to-typescript": "^1.1.1",
     "@balena/lf-to-abstract-sql": "^4.2.1",
-    "@balena/odata-parser": "^2.2.3",
+    "@balena/odata-parser": "^2.2.4",
     "@balena/odata-to-abstract-sql": "^5.4.1",
-    "@balena/sbvr-parser": "^1.2.2",
+    "@balena/sbvr-parser": "^1.2.4",
     "@balena/sbvr-types": "^3.4.3",
-    "@types/bluebird": "^3.5.33",
+    "@types/bluebird": "^3.5.35",
     "@types/body-parser": "^1.19.0",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/deep-freeze": "^0.1.2",
-    "@types/express": "^4.17.11",
+    "@types/express": "^4.17.12",
     "@types/express-session": "^1.17.3",
-    "@types/lodash": "^4.14.168",
+    "@types/lodash": "^4.14.170",
     "@types/memoizee": "^0.4.5",
     "@types/method-override": "0.0.31",
     "@types/multer": "^1.4.5",
     "@types/mysql": "^2.15.18",
-    "@types/node": "^12.20.5",
+    "@types/node": "^12.20.14",
     "@types/passport": "^0.4.7",
     "@types/passport-local": "1.0.33",
     "@types/passport-strategy": "^0.2.35",
-    "@types/pg": "^7.14.11",
+    "@types/pg": "^8.6.0",
     "@types/randomstring": "^1.1.6",
     "@types/websql": "0.0.27",
     "bluebird": "^3.7.2",
-    "commander": "^7.1.0",
+    "commander": "^7.2.0",
     "deep-freeze": "0.0.1",
     "eventemitter3": "^4.0.7",
-    "express-session": "^1.17.1",
+    "express-session": "^1.17.2",
     "lodash": "^4.17.21",
     "memoizee": "^0.4.15",
-    "pinejs-client-core": "^6.9.4",
-    "randomstring": "^1.1.5",
+    "pinejs-client-core": "^6.9.5",
+    "randomstring": "^1.2.1",
     "typed-error": "^3.2.1"
   },
   "devDependencies": {
-    "@balena/lint": "^5.4.1",
+    "@balena/lint": "^6.1.1",
     "@types/grunt": "^0.4.24",
-    "@types/terser-webpack-plugin": "^4.2.0",
-    "@types/webpack": "^4.41.26",
-    "grunt": "^1.3.0",
+    "@types/terser-webpack-plugin": "^4.2.1",
+    "@types/webpack": "^4.41.29",
+    "grunt": "^1.4.1",
     "grunt-check-dependencies": "^1.0.0",
-    "grunt-cli": "^1.3.2",
+    "grunt-cli": "^1.4.3",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
@@ -75,16 +75,16 @@
     "grunt-gitinfo": "^0.1.9",
     "grunt-text-replace": "^0.4.0",
     "grunt-ts": "^6.0.0-beta.22",
-    "grunt-webpack": "^4.0.2",
+    "grunt-webpack": "^4.0.3",
     "husky": "^4.3.8",
-    "lint-staged": "^10.5.4",
+    "lint-staged": "^11.0.0",
     "load-grunt-tasks": "^5.1.0",
     "raw-loader": "^4.0.2",
     "require-npm4-to-publish": "^1.0.0",
     "terser-webpack-plugin": "^4.2.3",
-    "ts-loader": "^8.0.18",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3",
+    "ts-loader": "^8.3.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2",
     "webpack": "^4.46.0",
     "webpack-dev-server": "^3.11.2"
   },
@@ -99,8 +99,8 @@
     "mysql": "^2.18.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "pg": "^8.5.1",
-    "pg-connection-string": "^2.4.0",
+    "pg": "^8.6.0",
+    "pg-connection-string": "^2.5.0",
     "serve-static": "^1.14.1"
   },
   "engines": {
@@ -114,10 +114,10 @@
   },
   "lint-staged": {
     "*.js": [
-      "balena-lint --typescript --fix"
+      "balena-lint --fix"
     ],
     "*.ts": [
-      "balena-lint --typescript --fix"
+      "balena-lint --fix"
     ]
   }
 }
