--- a/repo.yml
+++ b/repo.yml
@@ -1,20 +1,20 @@
 type: 'node'
 upstream:
-  - repo: 'abstract-sql-compiler'
+  - repo: '@balena/abstract-sql-compiler'
     url: 'https://github.com/balena-io-modules/abstract-sql-compiler'
-  - repo: 'abstract-sql-to-typescript'
+  - repo: '@balena/abstract-sql-to-typescript'
     url: 'https://github.com/balena-io-modules/abstract-sql-to-typescript'
-  - repo: 'lf-to-abstract-sql'
+  - repo: '@balena/lf-to-abstract-sql'
     url: 'https://github.com/balena-io-modules/lf-to-abstract-sql'
-  - repo: 'odata-parser'
+  - repo: '@balena/odata-parser'
     url: 'https://github.com/balena-io-modules/odata-parser'
-  - repo: 'odata-to-abstract-sql'
+  - repo: '@balena/odata-to-abstract-sql'
     url: 'https://github.com/balena-io-modules/odata-to-abstract-sql'
   - repo: 'pinejs-client-core'
     url: 'https://github.com/balena-io/pinejs-client-js'
-  - repo: 'sbvr-parser'
+  - repo: '@balena/sbvr-parser'
     url: 'https://github.com/balena-io-modules/sbvr-parser'
-  - repo: 'sbvr-types'
+  - repo: '@balena/sbvr-types'
     url: 'https://github.com/balena-io-modules/sbvr-types'
   - repo: 'typed-error'
     url: 'https://github.com/balena-io-modules/typed-error'
