--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "scripts": {
     "prepublish": "require-npm4-to-publish",
-    "prepublishOnly": "npm run lint",
     "prepare": "npm run build",
     "build": "grunt build",
     "webpack-browser": "grunt browser",
@@ -136,9 +135,7 @@
     "extension": [
       ".test.ts"
     ],
-    "require": [
-      "ts-node/register"
-    ],
+    "require": "ts-node/register/transpile-only",
     "exit": true,
     "timeout": 60000,
     "recursive": true
