--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   },
   "dependencies": {
     "@balena/abstract-sql-compiler": "^7.21.0-web-resource-2-3f4d8b2c0ab498530b54b10be9c7d7ead6e8f2f3-1",
-    "@balena/abstract-sql-to-typescript": "^1.2.0",
+    "@balena/abstract-sql-to-typescript": "^1.3.0-web-resource-2-6dfdc686839d1744b314971c4cb0fab2c02a0179-1",
     "@balena/lf-to-abstract-sql": "^4.5.1",
     "@balena/odata-parser": "^2.4.0",
-    "@balena/odata-to-abstract-sql": "^5.5.0",
+    "@balena/odata-to-abstract-sql": "^5.6.0-web-resource-2-ec2b3afc0b040516e645743a7e1afd9665513f06-1",
     "@balena/sbvr-parser": "^1.4.1",
     "@balena/sbvr-types": "^3.5.0-web-resource-2-011d2c67d8f9b8e3d42a4830b242ae3e8898e7a8-1",
     "@types/body-parser": "^1.19.2",
